feat: 여행 생성 기능 추가 - S3Service 추가 - MultipartJackson2HttpMessageConverter 추가 - 여행 생성 기능 추가 - Exception 클래스 추가 Closes #4

--- a/triplet/src/main/resources/application.properties
+++ b/triplet/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=triplet
 spring.profiles.include=secret
 
+spring.servlet.multipart.enabled=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#S3
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=${AWS_BUCKET}
