--- a/triplet/build.gradle
+++ b/triplet/build.gradle
@@ -32,6 +32,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	/* S3 */
+	implementation 'software.amazon.awssdk:s3:2.20.40'
+	implementation 'software.amazon.awssdk:auth:2.20.40'
+	implementation 'software.amazon.awssdk:core:2.20.40'
 }
 
 tasks.named('test') {
