--- a/triplet/src/main/resources/application.properties
+++ b/triplet/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=triplet
 spring.profiles.include=secret
 
-spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.repositories.enabled=false
