Init: Dockerfile 생성

--- a/triplet/Dockerfile
+++ b/triplet/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /home/app
 # build/libs의 jar파일을 컨테이너 내부의 app.jar로 복사
 COPY build/libs/*.jar app.jar
 # app.jar  실행
-ENTRYPOINT ["java","-jar","./app.jar"]
+ENTRYPOINT ["java","-jar","./app.jar","--spring.profiles.active=secret"]
