--- a/triplet/src/main/resources/application.properties
+++ b/triplet/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.profiles.include=secret
 spring.servlet.multipart.enabled=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #S3
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
