--- a/triplet/package.json
+++ b/triplet/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
