--- a/triplet/build.gradle
+++ b/triplet/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	implementation 'software.amazon.awssdk:core:2.20.40'
 
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // JPA 의존성
+	// jackson
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
 }
 
 tasks.named('test') {
