--- a/triplet/src/main/resources/application.properties
+++ b/triplet/src/main/resources/application.properties
@@ -8,10 +8,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
-
-
 #S3
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=${AWS_BUCKET}
+
+#file size
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.resolve-lazily=true
