--- a/triplet/build.gradle
+++ b/triplet/build.gradle
@@ -51,11 +51,15 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3:2.20.40'
 	implementation 'software.amazon.awssdk:auth:2.20.40'
 	implementation 'software.amazon.awssdk:core:2.20.40'
-
-	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // JPA 의존성
+	// JPA 의존성
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	// jackson
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
-
+	// elasticsearch
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation 'org.elasticsearch:elasticsearch:7.14.1'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.14.1'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.14.1'
 
 }
 
