--- a/triplet/build.gradle
+++ b/triplet/build.gradle
@@ -55,11 +55,8 @@ dependencies {
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	// jackson
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
-	// elasticsearch
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-	implementation 'org.elasticsearch:elasticsearch:7.14.1'
-	implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.14.1'
-	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.14.1'
+		implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+		implementation 'co.elastic.clients:elasticsearch-java:8.13.4'
 
 }
 
