feat: push알림 수정중
Fcm 이용한 device token 저장 api 추가

Fix: #feat/61_fcm

--- a/triplet/build.gradle
+++ b/triplet/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 		implementation 'co.elastic.clients:elasticsearch-java:8.13.4'
 
+	// firebase
+	implementation 'com.google.firebase:firebase-admin:7.1.1'
 }
 
 tasks.named('test') {
