--- a/triplet/package.json
+++ b/triplet/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
+    "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
