--- a/triplet/src/main/resources/elastic-travel-mapping.json
+++ b/triplet/src/main/resources/elastic-travel-mapping.json
@@ -4,6 +4,9 @@
       "country_id": {
         "type": "integer"
       },
+      "country_name": {
+        "type": "text"
+      },
       "creator_id": {
         "type": "long"
       },
